--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.2",
     "@remixicon/react": "^4.6.0",
+    "@supabase/supabase-js": "^2.49.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.4",
