--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.2",
     "@remixicon/react": "^4.6.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-table": "^8.21.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.473.0",
     "next": "15.1.4",
