--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=<SUBSTITUTE_SUPABASE_URL>
 NEXT_PUBLIC_SUPABASE_ANON_KEY=<SUBSTITUTE_SUPABASE_ANON_KEY>
+AMZ_CLIENT_ID=<AMZ_CLIENT_ID>
+AMZ_CLIENT_KEY=<AMZ_CLIENT_KEY>
+AMZ_AUTH_TOKEN=<AMZ_AUTH_TOKEN>
